# Antigravity-Account-Switcher

./: .gitignore  Cargo.toml  README.md  demo.html  index.html  package.json  search_js.js  search_strings.js  vite.config.ts
crates/switcher-core/: Cargo.toml
crates/switcher-core/src/: crypto.rs  error.rs  journal.rs  lib.rs  models.rs  redact.rs  storage.rs
crates/switcher-windows/: Cargo.toml
crates/switcher-windows/src/: credentials.rs  extension.rs  lib.rs  logging.rs  paths.rs  process.rs  quota.rs  service.rs  uninstall.rs  webview.rs
crates/switcher-windows/src/service/: asar_patch.rs  database.rs  helpers.rs  manifest.rs  mod.rs  oauth.rs  profiles.rs  smart_switch.rs  switch.rs  switch_fast.rs  tests.rs
docs/decisions/: 0001-dpapi-profile-credentials.md  0002-same-volume-hard-fail.md  0003-per-move-operation-journal.md  0004-oauth-refresh-disabled.md  0005-dynamic-process-tree.md  0006-oauth-refresh-enabled.md  0007-switch-levels.md  0008-antigravity-two-architecture.md  0009-smart-switch-limits-thresholds.md  README.md
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
src/: App.tsx  bridge.ts  i18n.ts  styles.css  styles.css.bak  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  http.rs  lib.rs
src/bridge/: demo.ts  index.ts  normalizers.ts
src/components/: AccountCard.tsx  Dashboard.tsx  DevTools.tsx  Header.tsx  Icons.tsx  LoadError.tsx  LoadingScreen.tsx  MiniApp.tsx  Modal.tsx  ProfileModals.tsx  Settings.tsx  StatusPill.tsx  SwitchFlow.tsx  TitleBar.tsx  Toast.tsx
src/components/Dashboard/: ActiveAccount.tsx  EmptyState.tsx  GlobalQuotaSummary.tsx  QuotaSection.tsx  SwitchLevelSelector.tsx  index.tsx
src/locales/: en.json  pl.json
src/styles/: index.css
src/styles/00-settings/: breakpoints.css  tokens.css
src/styles/01-generic/: base.css  reset.css
src/styles/02-layout/: app-shell.css  dashboard-layout.css
src/styles/03-components/: account-card.css  dev-tools.css  header.css  icons.css  load-error.css  loading-screen.css  mini-app.css  modal.css  profile-modals.css  settings.css  status-pill.css  switch-flow.css  title-bar.css  toast.css
src/styles/03-components/dashboard/: active-account.css  empty-state.css  global-quota-summary.css  quota-section.css  switch-level-selector.css
src/styles/04-utilities/: animations.css  helpers.css
