[workspace]
members = [
  "crates/switcher-core",
  "crates/switcher-windows",
  "src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.1.1-nightly.20260714"
edition = "2024"
license = "MIT"
authors = ["Antigravity Account Switcher contributors"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "default-tls"] }
base64 = "0.22"
aes-gcm = "0.10"



