[package]
name = "switcher-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
switcher-core = { path = "../switcher-core" }
tracing.workspace = true
uuid.workspace = true
walkdir = "2.5"
reqwest = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }



[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
tempfile = "3.14"
